buildscript {
    ext {
        jgraph_version = '1.5.2'
    }
}

allprojects {
    apply plugin: 'java'
    group 'com.faforever.neroxis'

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21


    repositories {
        mavenCentral()
    }

    dependencies {
        implementation('info.picocli:picocli:4.7.6')
        compileOnly('org.projectlombok:lombok:1.18.34')

        annotationProcessor('org.projectlombok:lombok:1.18.34')
        annotationProcessor('info.picocli:picocli-codegen:4.7.6')

        def junitVersion = '5.11.3'
        testImplementation("org.junit.jupiter:junit-jupiter-params:${junitVersion}")
        testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
        testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
    }

    test {
        useJUnitPlatform()
        systemProperties = [
                'junit.jupiter.execution.parallel.enabled': true
        ]
    }

    tasks.withType(JavaCompile).configureEach {
        configure(options) {
            options.compilerArgs << '-parameters'
        }
    }
}